objects/InsurancePolicy.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins_fsc__AttributesSelectedValues__c</fullName>
        <label>Attributes Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ContractLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For an employee&apos;s enrollment in a group benefit plan, this field identifies the plan in which the employee is enrolled.</description>
        <label>Plan</label>
        <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>InsurancePolicyPlanEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__MonthlyPremium__c</fullName>
        <label>Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__OriginalEffectiveDate__c</fullName>
        <description>DEPRECATED. Please use OriginalEffectiveDate.</description>
        <label>Original Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__OriginalExpirationDate__c</fullName>
        <description>DEPRECATED. Please use OriginalExpirationDate.</description>
        <label>Original Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__OriginalPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Please use OriginalPolicyId.</description>
        <label>Original Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Insurance Policies</relationshipLabel>
        <relationshipName>OriginalPolicies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__PaidToDate__c</fullName>
        <description>DEPRECATED. Please use PaidToDate.</description>
        <label>Policy Paid To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__PolicyTerm__c</fullName>
        <description>DEPRECATED. Please use PolicyTerm.</description>
        <label>Policy Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__PremiumCalculationMethod__c</fullName>
        <description>DEPRECATED. Please use PremiumCalculationMethod.</description>
        <label>Premium Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Modal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__PremiumPaymentType__c</fullName>
        <description>DEPRECATED. Please use PremiumPaymentType.</description>
        <label>Premium Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advance</fullName>
                    <default>true</default>
                    <label>Advance</label>
                </value>
                <value>
                    <fullName>Arrears</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ProductCode__c</fullName>
        <formula>Product.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ProductionCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Producer&apos;s Production Code</description>
        <label>Production Code</label>
        <referenceTo>vlocity_ins__ProductionCode__c</referenceTo>
        <relationshipLabel>Insurance Policies</relationshipLabel>
        <relationshipName>InsurancePolicyProductionCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalAmountForTerm__c</fullName>
        <description>DEPRECATED. Please use GrossWrittenPremium.</description>
        <formula>vlocity_ins_fsc__TotalFeeForTerm__c + vlocity_ins_fsc__TotalTaxForTerm__c + vlocity_ins_fsc__TotalPremiumForTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalAmount__c</fullName>
        <description>DEPRECATED. Please use TotalStandardAmount.</description>
        <formula>vlocity_ins_fsc__TotalTaxAmount__c + vlocity_ins_fsc__TotalFeeAmount__c + PremiumAmount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalCommission__c</fullName>
        <label>Total Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalFeeAmount__c</fullName>
        <label>Total Fee Amount</label>
        <summarizedField>vlocity_ins_fsc__InsurancePolicyPricingAdjustment__c.vlocity_ins_fsc__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins_fsc__InsurancePolicyPricingAdjustment__c.vlocity_ins_fsc__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins_fsc__InsurancePolicyPricingAdjustment__c.vlocity_ins_fsc__InsurancePolicyId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalFeeForTerm__c</fullName>
        <description>DEPRECATED. Please use TermFeeAmount.</description>
        <label>Total Fee for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalPremiumForTerm__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DEPRECATED. Please use TermPremiumAmount.</description>
        <label>Total Premium For Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalSumInsured__c</fullName>
        <description>DEPRECATED. Please use TotalSumInsured.</description>
        <label>Total Sum Insured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <summarizedField>vlocity_ins_fsc__InsurancePolicyPricingAdjustment__c.vlocity_ins_fsc__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins_fsc__InsurancePolicyPricingAdjustment__c.vlocity_ins_fsc__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins_fsc__InsurancePolicyPricingAdjustment__c.vlocity_ins_fsc__InsurancePolicyId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalTaxFeeAmount__c</fullName>
        <formula>vlocity_ins_fsc__TotalTaxAmount__c + vlocity_ins_fsc__TotalFeeAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax and Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalTaxForTerm__c</fullName>
        <description>DEPRECATED. Please use TermTaxAmount.</description>
        <label>Total Tax for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>All_InsurancePolicies</fullName>
        <columns>Name</columns>
        <columns>PolicyName</columns>
        <columns>NameInsured</columns>
        <columns>Status</columns>
        <columns>ExpirationDate</columns>
        <columns>Owner</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policies</label>
    </listViews>
    <listViews>
        <fullName>Renewals_upcoming_in_15_days</fullName>
        <columns>Name</columns>
        <columns>NameInsured</columns>
        <columns>ExpirationDate</columns>
        <columns>PremiumAmount</columns>
        <columns>Status</columns>
        <columns>RenewalDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExpirationDate</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:15</value>
        </filters>
        <filters>
            <field>RenewalDate</field>
            <operation>equals</operation>
        </filters>
        <label>Renewals (upcoming in 15 days)</label>
    </listViews>
    <listViews>
        <fullName>Renewals_upcoming_in_30_days</fullName>
        <columns>Name</columns>
        <columns>NameInsured</columns>
        <columns>ExpirationDate</columns>
        <columns>PremiumAmount</columns>
        <columns>Status</columns>
        <columns>RenewalDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExpirationDate</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <filters>
            <field>RenewalDate</field>
            <operation>equals</operation>
        </filters>
        <label>Renewals (upcoming in 30 days)</label>
    </listViews>
    <listViews>
        <fullName>Renewals_upcoming_in_60_days</fullName>
        <columns>Name</columns>
        <columns>NameInsured</columns>
        <columns>ExpirationDate</columns>
        <columns>PremiumAmount</columns>
        <columns>Status</columns>
        <columns>RenewalDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExpirationDate</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:60</value>
        </filters>
        <filters>
            <field>RenewalDate</field>
            <operation>equals</operation>
        </filters>
        <label>Renewals (upcoming in 60 days)</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>